// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "extensions": Array [
    "Invalid Phone Number",
    true,
  ],
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "extensions": Array [
    "Invalid Phone Number",
    "Invalid sip address",
  ],
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "extensions": Array [
    "Invalid Phone Number",
    true,
  ],
}
`;
